<resources>

    <!-- Common Strings -->

    <string name="app_name">Systock</string>
    <string name="action_settings">Settings</string>
    <string name="register_screen">Register Screen</string>
    <string name="back">Back</string>
    <string name="reg_error">Register error</string>
    <string name="address">Address</string>
    <string name="district">District</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="finish">Finish</string>
    <string name="close">Close</string>
    <string name="oops">Oops! Something\'s not right...</string>
    <string name="next">Next</string>
    <string name="name">Name</string>
    <string name="nameerror">Please, enter your name</string>
    <string name="emailerror">Please, enter your e-mail</string>
    <string name="passworderror">Please, enter a valid password</string>
    <string name="passworderror1">Please, repeat the password</string>
    <string name="invalid_email_password">Invalid e-mail and/or password</string>
    <string name="invalid_zipcode">Please, enter a valid zipcode and number</string>
    <string name="no_number">Please, insert a number</string>
    <string name="save">Save</string>
    <string name="register">Register:</string>
    <string name="email">Email</string>
    <string name="login">Login:</string>
    <string name="login_2">Login</string>
    <string name="confirm">Confirm</string>
    <string name="password">Password:</string>
    <string name="description">Description:</string>
    <string name="hintstatus">Enter the status...</string>
    <string name="status">Status:</string>
    <string name="hintdescription">Enter the description...</string>
    <string name="proceed">Continue</string>
    <string name="logo">Systock</string>
    <string name="copyright">®</string>
    <string name="namelist">Full Name:</string>
    <string name="emaillist">E-mail:</string>
    <string name="passwordlist">Password:</string>
    <string name="confirmpassword">Confirm Password:</string>
    <string name="type_list">Type list</string>
    <string name="user_list">User List</string>
    <string name="forgot">Forgot your password?</string>
    <string name="welcome">Welcome again!</string>
    <string name="signup">Sign Up</string>
    <string name="noaccount">Don\'t have an account?</string>
    <string name="zipcodeerror">Please, enter a valid zipcode</string>
    <string name="default_notification_channel_id">channel</string>
    <string name="fill_fields">Please, fill all the fields</string>
    <string name="error">Error</string>
    <string name="ok">Ok</string>
    <string name="login_succesful">Login successful!</string>
    <string name="register_succesful">Register successful!</string>
    <string name="text_welcome">Seja bem vindo...</string>
    <string name="cadastrodetipos">Cadastro De Tipos</string>
    <string name="anotherproduct">Do you want to register another product?</string>
    <string name="types">Types</string>
    <string name="zipcode">Zipcode</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="registered">Registered product(s)</string>
    <string name="type_register">Register a new type</string>
    <string name="systock_welcome">Welcome to Systock!</string>
    <string name="full_name">Full name</string>
    <string name="have_account">Already have an account?</string>
    <string name="inform_address">Please, inform your address</string>

    <!-- Tutorial Strings -->

    <string name="tutorial_1">
        Systock is an application designed for stock management and optimization, problem solving and
        product organization.
    </string>

    <string name="tutorial_1_title">
        Welcome to Systock
    </string>

    <string name="tutorial_2">
        To use Systock you must first register in our system. To do this, just click the "sign up"
        button and fill the required fields with your data.
    </string>

    <string name="tutorial_2_title">
        Registering
    </string>

    <string name="tutorial_3">
        After logging in, you will enter the home screen, where you will be able to register new
        products or view the ones you already registered.
    </string>

    <string name="tutorial_3_title">
        Home
    </string>

    <string name="tutorial_4">
        Systock uses a Firebase powered database, ensuring you data\'s security while providing you
        a simple and intuitive interface.
    </string>

    <string name="tutorial_4_title">
        How does Systock work?
    </string>

    <!-- Arrays -->

    <string name="product">Product</string>
    <string name="category">Category</string>
    <string name="type">Type</string>
    <string name="productregistration">Product Registration</string>

    <string-array name="states">
        <item>"*Estado"</item>
        <item>"Acre (AC)"</item>
        <item>"Alagoas (AL)"</item>
        <item>"Amapá (AP)"</item>
        <item>"Amazonas (AM)"</item>
        <item>"Bahia (BA)"</item>
        <item>"Ceará (CE)"</item>
        <item>"Distrito Federal (DF)"</item>
        <item>"Espírito Santo (ES)"</item>
        <item>"Goiás (GO)"</item>
        <item>"Maranhão (MA)"</item>
        <item>"Mato Grosso (MT)"</item>
        <item>"Mato Grosso do Sul (MS)"</item>
        <item>"Minas Gerais (MG)"</item>
        <item>"Pará (PA)"</item>
        <item>"Paraíba (PB)"</item>
        <item>"Paraná (PR)"</item>
        <item>"Pernambuco (PE)"</item>
        <item>"Piauí (PI)"</item>
        <item>"Rio de Janeiro (RJ)"</item>
        <item>"Rio Grande do Norte (RN)"</item>
        <item>"Rio Grande do Sul (RS)"</item>
        <item>"Rondônia (RO)"</item>
        <item>"Roraima (RR)"</item>
        <item>"Santa Catarina (SC)"</item>
        <item>"São Paulo (SP)"</item>
        <item>"Sergipe (SE)"</item>
        <item>"Tocantins (TO)"</item>
    </string-array>

    <string-array name="status_active_inactive">
        <item>"Status"</item>
        <item>"Active"</item>
        <item>"Inactive"</item>
    </string-array>





</resources>
